@@ -8,6 +8,6 @@ DIST e2fsprogs-1.40.9.tar.gz 4092812 RMD160 1cc51cb1b4bdcb338a2fdff50c79f38fb6e0
 DIST fuse-2.7.4.tar.gz 506658 RMD160 fe1808cfd58ad6651259245b424301e99881faa2 SHA1 7a86f5cf39f38e64ccbae093599d64a895b950ba SHA256 c8b070ece5d4e09bd06eea6c28818c718f803d93a4b85bacb9982deb8ded49e6
 DIST genkernel-3.4.10.903.tar.bz2 210258 RMD160 1042cb154be145a95c5d8f95f5b646e948f18bd8 SHA1 67ebe450d40718f701da0bddf5ca48d497ab2241 SHA256 9348d915137b9e266163d706045aee4ec6af76cba5f0f07f5fe05e2e7eb0954f
 DIST unionfs-fuse-0.22.tar.bz2 27355 RMD160 f29cbf41af0ba8f2181ac565a6663871676f6488 SHA1 e95799923ee3938e1fb44c6fd9aa7154d720063e SHA256 fa0c494a8ce63f235601fcc35e3a96527831169d6d5921ee49faccf3b25feb78
-EBUILD calckernel-3.4.10.903-r22.ebuild 4818 RMD160 435941df3ec92507010d45f17991a3d636aafd24 SHA1 995575a68a04b3770a27e95b1c73356ac2fc2aa9 SHA256 1fa8a2cce4fbd04649741e25feb6762bcb7858a63d3d33628d32927196eaa3df
+EBUILD calckernel-3.4.10.903-r22.ebuild 4826 RMD160 10c135db68ecd902be5bb296cb7909f69876b174 SHA1 98489b9221d1c5c59f17f2e7d8139402994f1cd3 SHA256 0413b1c5f9c3caebe6bb19d225bd4fd2b9d4e17ebaf927affc54e8f3bae4b6e6
 MISC ChangeLog 552 RMD160 539d67b6c6d7843d4829cd3bbeac05de5f18f723 SHA1 698dd18ebabe0f7a121a1368ed0f7ba330b39520 SHA256 2ba4905d943214c019b866df1c1788dbfda09dd2f0ea72c731a759ea81e488e3
 MISC metadata.xml 332 RMD160 7baff74f671fb7762513694b3d1694923b851b79 SHA1 72a7b3811a232e0506a65bdeb622f11abae0a04c SHA256 629337dd254d66431dd8752f97f1981de237cf1ca44a0eefc3a7cb8e667d7458
