@@ -1,6 +1,11 @@
 # ChangeLog for sys-boot/calcboot
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calcboot-3.75.4-r1.ebuild, calcboot-3.82.0-r1.ebuild,
+  calcboot-3.83.0.ebuild:
+  Changed homepage.
 
   27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
   calcboot-3.75.4-r1.ebuild, calcboot-3.82.0-r1.ebuild,
